<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/btnGoToHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/go_to_history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEqA"
        android:layout_width="71dp"
        android:layout_height="57dp"
        android:layout_marginStart="32dp"
        android:ems="10"
        android:hint="@string/a"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Switch
        android:id="@+id/swMinusA"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEqA" />

    <EditText
        android:id="@+id/etEqB"
        android:layout_width="71dp"
        android:layout_height="57dp"
        android:ems="10"
        android:hint="@string/b"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toStartOf="@+id/etEqC"
        app:layout_constraintStart_toEndOf="@+id/etEqA"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <EditText
        android:id="@+id/etEqC"
        android:layout_width="71dp"
        android:layout_height="57dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:hint="@string/c"
        android:inputType="number"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <Switch
        android:id="@+id/swMinusC"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEqC" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="165dp" />

    <TextView
        android:id="@+id/txvInputInformation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/add_values_for_a_b_and_c_from_the_equasion_nax_2_bx_c_0"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txvAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text=""
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txvEquasion" />

    <Button
        android:id="@+id/btnSolve"
        android:layout_width="158dp"
        android:layout_height="51dp"
        android:layout_marginBottom="28dp"
        android:text="@string/solve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Switch
        android:id="@+id/swMinusB"
        android:layout_width="91dp"
        android:layout_height="27dp"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        app:layout_constraintEnd_toStartOf="@+id/swMinusC"
        app:layout_constraintStart_toEndOf="@+id/swMinusA"
        app:layout_constraintTop_toBottomOf="@+id/etEqB" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="316dp" />

    <TextView
        android:id="@+id/txvEquasion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:text="@string/ax_2_bx_c_0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</androidx.constraintlayout.widget.ConstraintLayout>