<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btnDeleteHistory"
        android:layout_width="200dp"
        android:layout_height="51dp"
        android:layout_marginBottom="28dp"
        android:text="@string/delete_all_history"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnGoToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/go_to_calculator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="391dp"
        android:layout_height="530dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnDeleteHistory"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnGoToMain"
        app:layout_constraintVertical_bias="0.592">

        <TextView
            android:id="@+id/txvEmptyHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/history_is_empty"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            android:visibility="invisible" />

        <ListView
            android:id="@+id/lvHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="40dp">
        </ListView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>